--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset = "utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="BAC level calculator allows you to calculate your estimated alcohol intoxication level">
-<meta name="keywords" content="Blood alcohol content, BAC, Calculator, Alcohol, Ethanol, Alcohol intoxication">
+<meta name="description" content="BAC level calculator">
+<meta name="keywords" content="BAC, Calculator, Alcohol">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="main.css">
@@ -17,7 +17,7 @@
   gtag('js', new Date());
   gtag('config', 'UA-143819845-1');
 </script>
-<title> Blood alcohol content (BAC) Calculator </title>
+<title> BAC Calculator </title>
 </head>
 <body>
 <div class = "container-fluid text-center">
@@ -84,6 +84,19 @@
         <p> Sober in: </p>
         <p id = "soberIn"></p>
       </div>
+    </div>
+    <button type = "button" class = "btn btn-secondary" id = "toggleTable"> Intoxication table ▼ </button>
+    <div id = "intoxicationTable">
+      <table class = "table table-borderless table-sm">
+        <thead>
+          <tr>
+            <th>Time:</th>
+            <th>Alcohol level:</th>
+          </tr>
+        </thead>
+        <tbody id = "intoxicationTableBody">
+        </tbody>
+      </table>
     </div>
   </div>
   </div>
