--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<!--- "BAC Calculator" by mstopin | https://github.com/mstopin-->
+<!--- 
+  "BAC Calculator" by mstopin | https://github.com/mstopin
+  Do not remove this! 
+-->
 <html>
 <head>
 <meta charset = "utf-8">
