--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<!--- 
+<!---
   "BAC Calculator" by mstopin | https://github.com/mstopin
-  Do not remove this! 
+  Do not remove this!
 -->
 <html>
 <head>
@@ -106,7 +106,7 @@
   </div>
 </div>
 <footer class = "text-center">
-<p class = "lead" style = "font-size: 0.9em"> Disclaimer! This BAC level calculator is for educational purposes only. Calculations are estimated and cannot fully determine your real BAC level due to factors not taken under consideration e.g. eaten food. For accurate measurements please use a breathalyzer or take a blood test. Do not drive after drinking! </p>
+<p class = "lead" style = "font-size: 0.9em"> Disclaimer! This BAC level calculator is for educational purposes only. Calculations are estimated and cannot fully determine your real BAC level due to factors not taken under consideration e.g. eaten food. For accurate measurements please use a breathalyzer or take a blood test. <br/> <b> Do not drive after drinking! </b> </p>
 <p style = "font-size: 0.9em"> Made with <span style = "color:#e25555;">❤</span> by <a href = "https://github.com/mstopin" target = "_blank"> mstopin </a> </p>
 </footer>
 </body>
